Issue #11576: Fixed timedelta subtraction glitch on big timedelta values